--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -11,6 +11,7 @@ RUN apk update && \
   # https://github.com/krallin/tini#using-tini
   apk add --no-cache tini && \
   rm -rf /var/cache/apk/*
+RUN mkdir -p /app/data
 RUN npm install -g nodemon
 COPY --from=builder node_modules node_modules/
 COPY package*.json ./
