--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "author": "",
   "license": "ISC",
   "nodemonConfig": {
-    "ignore": ["/app/data"]
+    "ignore": [
+      "/app/data"
+    ]
   },
   "dependencies": {
     "jszip": "^3.10.1",
     "logger": "github:c3pobot/logger",
-    "minio": "^7.1.3",
-    "node-fetch": "^2.6.7"
+    "node-fetch": "^2.6.7",
+    "shelljs": "^0.8.5"
   }
 }
